--- a/projet/view/login_2.css
+++ b/projet/view/login_2.css
@@ -69,6 +69,9 @@ a:hover {
 *{
     box-sizing: border-box;
 }
+body {
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; 
+  }
 :root{
     --color-first: #132A3E;
     --color-second:#dfdede;
