--- a/projet/view/users3.css
+++ b/projet/view/users3.css
@@ -10,7 +10,7 @@
     left: 0;
     height: 100%;
     width: 200px;
-    background-color: rgb(224, 131, 9);
+    background-color: #132A3E;
     color: #fff;
     transition: transform 0.3s ease-in-out;
     transform: translateX(0);
@@ -95,7 +95,7 @@ color: rgb(4, 6, 26);
       right: 5px;
       font-size: 30px;
       cursor: pointer;
-      color: #132A3E;;
+      color:  rgb(224, 131, 9);
       }
       #close-form:hover {
           position: absolute;
@@ -103,7 +103,7 @@ color: rgb(4, 6, 26);
           right: 5px;
           font-size: 30px;
           cursor: pointer;
-          color:  #132A3E;;
+          color:  rgb(224, 131, 9);
           }
 
 .contenu table {
@@ -157,7 +157,7 @@ h6{
     bottom: 0;
     width: 100%;
     height: 2px; /* Ajustez l'épaisseur de la ligne */
-    background-color: #132A3E; /* Choisissez la couleur de la ligne */
+    background-color: #E78D1E; /* Choisissez la couleur de la ligne */
   }
 
 .sidebar.collapsed {
@@ -167,11 +167,13 @@ h6{
     width: 150px; /* Ajustez la taille de l'image selon vos besoins */
     height: 100px;
 }
-table {
-    border-collapse: collapse;
-    width: 700px;
-    font-family: Arial, sans-serif;
-  }
+
+.my-table{
+  width:100px;
+  position: relative;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+}
   
   th, td {
     padding: 12px 15px;
@@ -180,7 +182,7 @@ table {
   }
   
   th {
-    background-color: #E78D1E;
+    background-color: #132A3E;
     color: white;
   }
   
