--- a/partenariatcss.css
+++ b/partenariatcss.css
@@ -28,10 +28,20 @@ body{
     position: relative;
     bottom : 1%; /* Déplace l'élément à 50% de la hauteur de la page */
     left: 5%; /* Déplace l'élément à 50% de la largeur de la page */
-    transform: translate(-180%, -80%);
+    transform: translate(-180%, -40%);
+    font-family: "Open sabs" sans-serif;
+}
+.titre2 h2{
+    position: relative;
+    bottom : 1%; /* Déplace l'élément à 50% de la hauteur de la page */
+    left: 5%; /* Déplace l'élément à 50% de la largeur de la page */
+    transform: translate(-300%, -10%);
     font-family: "Open sabs" sans-serif;
 }
 .form{
+    padding: 20px 30px;
+}
+.form2{
     padding: 20px 30px;
 }
 .form-control{
@@ -39,7 +49,15 @@ body{
     padding-bottom: 15px;
     position: relative;
 }
+.form-control2{
+    margin-bottom: 5px;
+    padding-bottom: 20px;
+    position: relative;
+}
 .form-control label{
+    display: inline-block;
+}
+.form-control2 label{
     display: inline-block;
 }
 .form-control input{
@@ -52,6 +70,14 @@ body{
     height: 40px;
     padding-left: 3px;
     margin-bottom: 12px;
+}
+.form-control2 input{
+    border:  2px solid var(--color-second);
+    border-radius: 4px;
+    font-family: inherit;
+    font-size: 14px;
+    width: 50%;
+    height: 30px;
 }
 .form-control i{
     position: absolute;
@@ -97,6 +123,51 @@ body{
     visibility: visible;
    
 }
+
+.form-control2 i{
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    visibility: hidden;
+}
+.form-control2 small{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+}
+.form2 button{
+    background: var(--color-first);
+    border: 2px solid var(--color-first);
+    color: var(--color-white);
+    display: block;
+    font-family: inherit;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 16px;
+    width: 100%;
+    cursor: pointer;
+}
+.form-control2.success input{
+    border-color: var(--color-success);
+}
+.form-control2.error input{
+    border-color: var(--color-error);
+}
+.form-control2.success i.fa-check-circle{
+    color: var(--color-success);
+    visibility: visible;
+}
+.form-control2.error i.fa-exclamation{
+    color: var(--color-error);
+    visibility: visible;width: 20px;
+    padding-top: 10px;
+}
+.form-control2.error small{
+    color: var(--color-error);
+    visibility: visible;
+   
+}
 .container{
     background: var(--color-white);
 
@@ -121,6 +192,32 @@ body{
     
   }
 #overlay2 {
+    position: fixed;
+
+    top: 55%; /* Déplace l'élément à 50% de la hauteur de la page */
+    left: 60%; /* Déplace l'élément à 50% de la largeur de la page */
+    transform: translate(-60%, -50%); /* Centre l'élément en utilisant la moitié de sa largeur et de sa hauteur */
+    width: 40%;
+    height: 30%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+#overlay3 {
+    position: fixed;
+
+    top: 55%; /* Déplace l'élément à 50% de la hauteur de la page */
+    left: 60%; /* Déplace l'élément à 50% de la largeur de la page */
+    transform: translate(-60%, -50%); /* Centre l'élément en utilisant la moitié de sa largeur et de sa hauteur */
+    width: 40%;
+    height: 30%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+#overlay4 {
     position: fixed;
 
     top: 55%; /* Déplace l'élément à 50% de la hauteur de la page */
@@ -172,11 +269,34 @@ color: rgb(4, 6, 26);
             cursor: pointer;
             color:  rgb(224, 131, 9);
             }
+
+#close-form3 {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 26px;
+    cursor: pointer;
+    color:  rgb(4, 6, 26);
+            }
+            
+ #close-form3:hover {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 30px;
+    cursor: pointer;
+    color:  rgb(224, 131, 9);
+    }
     /* Ajout de styles pour centrer la table avec un arrière-plan blanc */
   
 
     #tablePartenariat th,
     #tablePartenariat td {
+        padding: 10px;
+        text-align: center;
+    }
+    #tablePartenariat2 th,
+    #tablePartenariat2 td {
         padding: 10px;
         text-align: center;
     }
@@ -200,21 +320,33 @@ color: rgb(4, 6, 26);
     .custom-button:hover {
         background-color: #edb302; /* Changement de couleur de fond au survol */
     }
+
+
     #tablePartenariat {
-        position: relative;
+    position: relative;
     bottom: 5%; /* Déplace l'élément à 50% de la hauteur de la page */
     left: 5%; /* Déplace l'élément à 50% de la largeur de la page */
         background-color: #f7f7f7;
         border-radius: 15px;
         width: 80%;
-        height: 50%;
-   
+        height: 40%;
+        transform: translate(0%, 5%);
     }
+    #tablePartenariat2 {
+        position: relative;
+        bottom: 5%; /* Déplace l'élément à 50% de la hauteur de la page */
+        left: 5%; /* Déplace l'élément à 50% de la largeur de la page */
+            background-color: #f7f7f7;
+            border-radius: 15px;
+            width: 80%;
+            height: 40%;
+            transform: translate(0%, 10%);
+        }
     #btnAjouter{
         position: relative;
-    top : 5%; /* Déplace l'élément à 50% de la hauteur de la page */
+   /* Déplace l'élément à 50% de la hauteur de la page */
     left: 45%; /* Déplace l'élément à 50% de la largeur de la page */
-    transform: translate(-60%, -50%);
+    transform: translate(-60%, 90%);
         border-radius: 4px;
         border: none;
         margin-bottom: 5px;
@@ -223,6 +355,21 @@ color: rgb(4, 6, 26);
         background-color: #edb302;
     }
     #btnAjouter:hover{
+        background-color: #dfa804;
+    }
+    #btnAjouter2{
+        position: relative;
+   /* Déplace l'élément à 50% de la hauteur de la page */
+    left: 45%; /* Déplace l'élément à 50% de la largeur de la page */
+    transform: translate(-60%, 130%);
+        border-radius: 4px;
+        border: none;
+        margin-bottom: 5px;
+        width: 100px;
+        height: 32px;
+        background-color: #edb302;
+    }
+    #btnAjouter2:hover{
         background-color: #dfa804;
     }
     #bouton_modifier{
