11éme commit projet

--- a/projet/view/profile2.css
+++ b/projet/view/profile2.css
@@ -95,7 +95,7 @@ color: rgb(4, 6, 26);
       right: 5px;
       font-size: 30px;
       cursor: pointer;
-      color: #132A3E;;
+      color: #132A3E;
       }
       #close-form:hover {
           position: absolute;
