12éme commit projet

--- a/projet/view/users5.css
+++ b/projet/view/users5.css
@@ -1,220 +1,129 @@
-.wrapper {
-    display: flex;
-    height: 100vh;
-    width: 1150px;
-  }
+.sidebar {
+  /* position: fixed; */
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 200px;
+  background-color: #132A3E;
+  color: #fff;
+  z-index: 1;
   
-  .sidebar {
-    /* position: fixed; */
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 200px;
-    background-color: #132A3E;
-    color: #fff;
-    transition: transform 0.3s ease-in-out;
-    transform: translateX(0);
-  }
-  
-  .contenu {
-    /* display: flex; */
-    height: 100vh;
-    width: 1170px;
-}
-.tables{
-    flex-grow: 1;
-    background-color:white;
-    padding: 20px;
-    height: 90%;
-    width: 1166px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.navbar{
-    flex-grow: 1;
-    background-color:#1E4C68;
-    padding: 20px;
-    height: 10%;
-    width:1166px;
-    display: flex;
-    justify-content:right;
-    align-items: right;
-    /* flex-direction: column; */
 
 }
-#overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
+.navbar {
+  background-color: #1E4C68;
+  /* padding: 20px; */
+  height: 10%;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: none;
+  display: flex;
+  justify-content: right;
   align-items: center;
-  justify-content: center;
+  /* z-index: -1; */
 }
-#overlay2 {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: none;
-  align-items: center;
-  justify-content: center;
-}
-#form-container {
-  background-color: white;
-  padding: 20px;
+.navbar button {
+  background-color: transparent;
+  color: white;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  /* display: inline-block; */
+  font-size: 16px;
+  cursor: pointer;
   border-radius: 5px;
+}
+
+
+
+
+
+.tables {
+  background-color: white;
+  /* padding: 20px; */
+  height: 100%;
+  width: 98%;
+  padding-top: 10px;
+  padding-left: 10px;
+  
+}
+
+
+.wrapper {
+  display: flex;
+  height: 100vh;
+  width: 1366px;
+}
+.contenu {
+  /* display: flex; */
+  height: 100vh;
+  width: 100%;
   position: relative;
 }
-#close-form {
-position: absolute;
-top: 5px;
-right: 5px;
-font-size: 26px;
-cursor: pointer;
-color: rgb(4, 6, 26);
-}
-#close-form2 {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  font-size: 26px;
-  cursor: pointer;
-  color:  rgb(4, 6, 26);
-  }
 
-  #close-form2:hover {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      font-size: 30px;
-      cursor: pointer;
-      color:  rgb(224, 131, 9);
-      }
-      #close-form:hover {
-          position: absolute;
-          top: 5px;
-          right: 5px;
-          font-size: 30px;
-          cursor: pointer;
-          color:  rgb(224, 131, 9);
-          }
-
-.contenu table {
-    margin: 0 auto;
-}
-  
 .sidebar-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
 }
 
 .sidebar-toggle {
-    background-color: transparent;
-    border: none;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
 }
 
 .sidebar-nav {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 h6{
-    color: grey;
-   
-    
-    
+  color: grey;
+ 
+  
+  
 }
 
 .sidebar-nav li {
-    padding: 10px 20px;
+  padding: 10px 20px;
 }
 
 .sidebar-nav li a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .sidebar-nav li a:hover {
-    position: relative;
-  }
-  
- .sidebar-nav li a:hover::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px; /* Ajustez l'épaisseur de la ligne */
-    background-color: #E78D1E; /* Choisissez la couleur de la ligne */
-  }
+  position: relative;
+}
+
+.sidebar-nav li a:hover::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px; /* Ajustez l'épaisseur de la ligne */
+  background-color: #E78D1E; /* Choisissez la couleur de la ligne */
+}
 
 .sidebar.collapsed {
-    transform: translateX(-70%);
+  transform: translateX(-70%);
 }
 .sidebar-toggle img {
-    width: 150px; /* Ajustez la taille de l'image selon vos besoins */
-    height: 100px;
+  width: 150px; /* Ajustez la taille de l'image selon vos besoins */
+  height: 100px;
 }
+h1{color:grey;
+padding-top: 10px;
+font-family:Arial, Helvetica, sans-serif;
 
-.my-table{
-  width:100%;
-  max-width: 800px; /* Ajustez la valeur selon vos besoins */
-
-  position: relative;
-  border-collapse: collapse;
-  font-family: Arial, sans-serif;
 }
+.row{
+  display: flex;
+  justify-content:space-around;
   
-  th, td {
-    padding: 12px 15px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
   
-  th {
-    background-color: #132A3E;
-    color: white;
-  }
-  
-  tr:hover {
-    background-color: #f5f5f5;
-  }
-  /* Bouton Supprimer */
-button[name="delete"] {
-    background-color: #ff4d4d; /* Rouge */
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  /* Bouton Modifier */
-  button[name="debloquer"] {
-    background-color: #4CAF50; /* Vert */
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+}
